Update scripts to compile and run stats.fancy